--- a/mysqlha/latest/Chart.yaml
+++ b/mysqlha/latest/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: mysqlha
-version: 2.0.0
+version: latest
 appVersion: 5.7.13
 description: MySQL cluster with a single master and zero or more slave replicas
 keywords:
