- add Prometheus configuration in kafka v0.8.0 (debug-ing)

--- a/kafka/v0.8.0/values.yaml
+++ b/kafka/v0.8.0/values.yaml
@@ -167,6 +167,9 @@ cp-control-center:
   #   cpu: 100m
   #   memory: 128Mi
 
+## ------------------------------------------------------
+## Topic UI
+## ------------------------------------------------------
 kafka-topics-ui:
   enabled: true
   replicas: 1
@@ -174,3 +177,20 @@ kafka-topics-ui:
     repository: ranchercharts/landoop-kafka-topics-ui
     tag: latest
     pullPolicy: IfNotPresent
+
+## ------------------------------------------------------
+## Prometheus Exporter Configuration
+## ------------------------------------------------------
+## ref: https://prometheus.io/docs/instrumenting/exporters/
+prometheus:
+  ## JMX Exporter Configuration
+  ## ref: https://github.com/prometheus/jmx_exporter  jmx:
+    enabled: true
+    image: solsson/kafka-prometheus-jmx-exporter@sha256
+    imageTag: 6f82e2b0464f50da8104acd7363fb9b995001ddff77d248379f8788e78946143
+    imagePullPolicy: IfNotPresent
+    port: 5556
+
+    ## Resources configuration for the JMX exporter container.
+    ## See the `resources` documentation above for details.
+    resources: {}
