--- a/kafka/v0.8.0/questions.yml
+++ b/kafka/v0.8.0/questions.yml
@@ -2,6 +2,16 @@ labels:
   io.cattle.role: project # options are cluster/project
   io.rancher.app_min_version: 0.8.0
 questions:
+- variable: private_registry.enabled
+  default: false
+  type: boolean
+  label: Private Registry
+  show_subquestion_if: true
+  group: "Private Registry Settings"
+  subquestions:
+  - variable: private_registry.path
+    type: string
+    label: Private Registry path
 # Control Center Configurations
 - variable: global.enterprise
   default: false
