--- a/kafka/v0.8.0/values.yaml
+++ b/kafka/v0.8.0/values.yaml
@@ -1,6 +1,10 @@
 global:
   enterprise: false
 
+private_registry:
+  enabled: false
+  path:
+
 ## ------------------------------------------------------
 ## Zookeeper
 ## ------------------------------------------------------
