- add private registry config in cp-kafka values

--- a/kafka/v0.8.0/charts/cp-kafka/values.yaml
+++ b/kafka/v0.8.0/charts/cp-kafka/values.yaml
@@ -3,6 +3,13 @@
 # Declare variables to be passed into your templates.
 
 ## ------------------------------------------------------
+## Private Registry
+## ------------------------------------------------------
+private_registry:
+  enabled: false
+  path:
+
+## ------------------------------------------------------
 ## Kafka
 ## ------------------------------------------------------
 
