--- a/harbor/v1.2.0/values.yaml
+++ b/harbor/v1.2.0/values.yaml
@@ -299,7 +299,7 @@ privateRegistry: "10.134.200.110:5000"
 
 core:
   image:
-    repository: ${privateRegistry}/ranchercharts/goharbor-harbor-core
+    repository: {{ .privateRegistry }}/ranchercharts/goharbor-harbor-core
     tag: v1.9.1
   replicas: 1
 # resources:
