--- a/kafka/v0.8.0/questions.yml
+++ b/kafka/v0.8.0/questions.yml
@@ -2,16 +2,23 @@ labels:
   io.cattle.role: project # options are cluster/project
   io.rancher.app_min_version: 0.8.0
 questions:
-- variable: private_registry.enabled
+# Private Registry
+- variable: global.private_registry.enabled
   default: false
   type: boolean
   label: Private Registry
   show_subquestion_if: true
-  group: "Private Registry Settings"
+  group: "Global Settings"
   subquestions:
-  - variable: private_registry.path
+  - variable: global.private_registry.path
     type: string
     label: Private Registry path
+# Prometheus Exporter
+- variable: global.prometheus.jmx.enabled
+  default: false
+  type: boolean
+  label: Enable Prometheus Exporter
+  group: "Global Settings"
 # Control Center Configurations
 - variable: global.enterprise
   default: false
