--- a/kafka/v0.8.0/values.yaml
+++ b/kafka/v0.8.0/values.yaml
@@ -1,9 +1,11 @@
 global:
   enterprise: false
-
-private_registry:
-  enabled: false
-  path:
+  private_registry:
+    enabled: false
+    path:
+  prometheus:
+    jmx:
+      enabled: false
 
 ## ------------------------------------------------------
 ## Zookeeper
