--- a/kafka/v0.8.0/charts/cp-zookeeper/templates/statefulset.yaml
+++ b/kafka/v0.8.0/charts/cp-zookeeper/templates/statefulset.yaml
@@ -22,12 +22,12 @@ spec:
       labels:
         app: {{ template "cp-zookeeper.name" . }}
         release: {{ .Release.Name }}
-      {{- if or .Values.podAnnotations .Values.prometheus.jmx.enabled }}
+      {{- if or .Values.podAnnotations .Values.global.prometheus.jmx.enabled }}
       annotations:
       {{- range $key, $value := .Values.podAnnotations }}
         {{ $key }}: {{ $value | quote }}
       {{- end }}
-      {{- if .Values.prometheus.jmx.enabled }}
+      {{- if .Values.global.prometheus.jmx.enabled }}
         prometheus.io/scrape: "true"
         prometheus.io/port: {{ .Values.prometheus.jmx.port | quote }}
       {{- end }}
@@ -50,9 +50,13 @@ spec:
                     - {{ .Release.Name }}
               topologyKey: "kubernetes.io/hostname"
       containers:
-      {{- if .Values.prometheus.jmx.enabled }}
+      {{- if .Values.global.prometheus.jmx.enabled }}
       - name: prometheus-jmx-exporter
+        {{- if .Values.global.private_registry.enabled }}
+        image: "{{ .Values.global.private_registry.path }}/{{ .Values.prometheus.jmx.image }}:{{ .Values.prometheus.jmx.imageTag }}"
+        {{- else }}
         image: "{{ .Values.prometheus.jmx.image }}:{{ .Values.prometheus.jmx.imageTag }}"
+        {{- end }}
         imagePullPolicy: "{{ .Values.prometheus.jmx.imagePullPolicy }}"
         command:
         - java
@@ -73,7 +77,11 @@ spec:
           mountPath: /etc/jmx-zookeeper
       {{- end }}
       - name: {{ template "cp-zookeeper.name" . }}-server
+        {{- if .Values.global.private_registry.enabled }}
+        image: "{{ .Values.global.private_registry.path }}/{{ .Values.image }}:{{ .Values.imageTag }}"
+        {{- else }}
         image: "{{ .Values.image }}:{{ .Values.imageTag }}"
+        {{- end }}
         imagePullPolicy: "{{ .Values.imagePullPolicy }}"
         ports:
         - containerPort: {{ .Values.clientPort }}
@@ -82,7 +90,7 @@ spec:
           name: server
         - containerPort: {{ .Values.leaderElectionPort }}
           name: leader-election
-        {{- if .Values.prometheus.jmx.enabled }}
+        {{- if .Values.global.prometheus.jmx.enabled }}
         - containerPort: {{ .Values.jmx.port }}
           name: jmx
         {{- end }}
@@ -141,7 +149,7 @@ spec:
       - name: datalogdir
         emptyDir: {}
       {{- end }}
-      {{- if .Values.prometheus.jmx.enabled }}
+      {{- if .Values.global.prometheus.jmx.enabled }}
       - name: jmx-config
         configMap:
           name: {{ template "cp-zookeeper.fullname" . }}-jmx-configmap
