--- a/harbor/v1.2.0/templates/chartmuseum/chartmuseum-dpl.yaml
+++ b/harbor/v1.2.0/templates/chartmuseum/chartmuseum-dpl.yaml
@@ -31,7 +31,7 @@ spec:
       {{- end }}
       containers:
       - name: chartmuseum
-        image: {{ .Values.chartmuseum.image.repository }}:{{ .Values.chartmuseum.image.tag }}
+        image: {{ .Values.privateRegistry }}/{{ .Values.chartmuseum.image.repository }}:{{ .Values.chartmuseum.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         livenessProbe:
           httpGet:
