--- a/harbor/v1.2.0/templates/clair/clair-dpl.yaml
+++ b/harbor/v1.2.0/templates/clair/clair-dpl.yaml
@@ -29,7 +29,7 @@ spec:
       {{- end }}
       containers:
       - name: clair
-        image: {{ .Values.clair.image.repository }}:{{ .Values.clair.image.tag }}
+        image: {{ .Values.privateRegistry }}/{{ .Values.clair.image.repository }}:{{ .Values.clair.image.tag }}
         imagePullPolicy: {{ .Values.imagePullPolicy }}
         livenessProbe:
           httpGet:
