--- a/mysqldump/values.yaml
+++ b/mysqldump/values.yaml
@@ -14,13 +14,13 @@ image:
 mysql:
 ## Without a host set, this chart will not do anything as it is expected
 ## to be used only when there's an existing database to backup.
-  host: ""
+  host: "10.43.186.211"
   username: root
   # overriden by existingDbSecret / existingDbSecretKey if set
-  password:
+  password: "yT6wwMK50d"
   port: 3306
   # db for single db backup
-  db: dbname
+  db: mysql
   # Get password from existing secret
   # existingSecret:
   # existingSecretKey:
@@ -42,7 +42,7 @@ dumpAllToStdout: false
 
 ## set to `now` to get a one time job, or a cronjob schedule like `0 0 * * *`
 ## to get a cronjob.
-schedule: "0 3 * * *"
+schedule: "* * * * *"
 
 # enable some debug options
 debug: false
