--- a/mysql/v1.3.1/values.yaml
+++ b/mysql/v1.3.1/values.yaml
@@ -123,7 +123,7 @@ resources:
 configurationFilesPath: /etc/mysql/conf.d/
 
 # Custom mysql configuration files used to override default mysql settings
-configurationFiles: {}
+configurationFiles: 
   mysql.cnf: |-
     [mysqld]
     default_authentication_plugin=mysql_native_password
