object: Modified configuration

--- a/mysql/v1.3.1/values.yaml
+++ b/mysql/v1.3.1/values.yaml
@@ -123,10 +123,9 @@ resources:
 configurationFilesPath: /etc/mysql/conf.d/
 
 # Custom mysql configuration files used to override default mysql settings
-configurationFiles: 
-  mysql.cnf: |-
-    [mysqld]
-    default_authentication_plugin=mysql_native_password
+configurationFiles: {}
+#  mysql.cnf: |-
+#    [mysqld]
 #    skip-name-resolve
 #    ssl-ca=/ssl/ca.pem
 #    ssl-cert=/ssl/server-cert.pem
