--- a/redis/v9.0.2/values.yaml
+++ b/redis/v9.0.2/values.yaml
@@ -516,9 +516,7 @@ volumePermissions:
 ##
 configmap: |-
   # Enable AOF https://redis.io/topics/persistence#append-only-file
-  appendonly yes
-  # Disable RDB persistence, AOF persistence already enabled.
-  save ""
+  appendonly no
 
 ## Sysctl InitContainer
 ## used to perform sysctl operation to modify Kernel settings (needed sometimes to avoid warnings)
