object: Modify mongodb charts >> bitnami,rancher,helm

--- a/mongodb-rancher-chart/v7.2.6/values.yaml
+++ b/mongodb-rancher-chart/v7.2.6/values.yaml
@@ -11,7 +11,7 @@
 image:
   ## Bitnami MongoDB registry
   ##
-  registry: docker.io
+  registry: 
   ## Bitnami MongoDB image name
   ##
   repository: ranchercharts/bitnami-mongodb
