--- a/mongodb-bitnami-chart/values.yaml
+++ b/mongodb-bitnami-chart/values.yaml
@@ -13,7 +13,7 @@
 image:
   ## Bitnami MongoDB registry
   ##
-  registry: docker.io
+  registry: 
   ## Bitnami MongoDB image name
   ##
   repository: bitnami/mongodb
