--- a/mongodb-helm-chart/Chart.yaml
+++ b/mongodb-helm-chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: helm-mongodb-chart
+name: mongodb
 version: 7.8.10
 appVersion: 4.2.4
 # The mongodb chart is deprecated and no longer maintained. For details deprecation, see the PROCESSES.md file.
