--- a/mongodb-rancher-chart/v7.2.6/Chart.yaml
+++ b/mongodb-rancher-chart/v7.2.6/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: mongodb-rancher-chart
+name: mongodb
 version: 7.2.6
 appVersion: 4.0.12
 description: NoSQL document-oriented database that stores JSON-like documents with dynamic schemas, simplifying the integration of data in content-driven applications.
