--- a/mongodb-bitnami-chart/Chart.yaml
+++ b/mongodb-bitnami-chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-name: mongodb
+name: mongodb-bitnami-chart
 version: 7.14.0
 appVersion: 4.2.6
 description: NoSQL document-oriented database that stores JSON-like documents with dynamic schemas, simplifying the integration of data in content-driven applications.
