--- a/mongodb/v7.2.6/values.yaml
+++ b/mongodb/v7.2.6/values.yaml
@@ -11,7 +11,7 @@
 image:
   ## Bitnami MongoDB registry
   ##
-  registry: 
+  registry: bitnami/mongodb
   ## Bitnami MongoDB image name
   ##
   repository: ranchercharts/bitnami-mongodb
