--- a/mongodb/v7.2.6/values.yaml
+++ b/mongodb/v7.2.6/values.yaml
@@ -11,14 +11,14 @@
 image:
   ## Bitnami MongoDB registry
   ##
-  registry: 
+  registry: bitnami/mongodb
   ## Bitnami MongoDB image name
   ##
-  repository: 
+  repository: ranchercharts/bitnami-mongodb
   ## Bitnami MongoDB image tag
   ## ref: https://hub.docker.com/r/bitnami/mongodb/tags/
   ##
-  tag: 
+  tag: 4.0.12-debian-9-r5
   ## Specify a imagePullPolicy
   ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
   ##
