--- a/mysql/v1.3.1/templates/deployment.yaml
+++ b/mysql/v1.3.1/templates/deployment.yaml
@@ -57,6 +57,8 @@ spec:
           {{- if .Values.persistence.subPath }}
           subPath: {{ .Values.persistence.subPath }}
           {{- end }}
+        - name: data
+          mountPath: /mysqlbackupfile
       {{- if .Values.extraInitContainers }}
 {{ tpl .Values.extraInitContainers . | indent 6 }}
       {{- end }}
@@ -151,6 +153,8 @@ spec:
           {{- if .Values.persistence.subPath }}
           subPath: {{ .Values.persistence.subPath }}
           {{- end }}
+        - name: data
+          mountPath: /mysqlbackupfile
         {{- if .Values.configurationFiles }}
         {{- range $key, $val := .Values.configurationFiles }}
         - name: configurations
