objective: added nolock to mountOptions.
Not transfering lock state to nfs server should be ok if only 1 pod is reading and writing froma directory.

--- a/nfs-server-provisioner/values.yaml
+++ b/nfs-server-provisioner/values.yaml
@@ -71,6 +71,7 @@ storageClass:
 
   mountOptions:
     - vers=3
+    - nolock
 
   ## ReclaimPolicy field of the class, which can be either Delete or Retain
   reclaimPolicy: Delete
