objective: changed chart version and added SERVER_BASEPATH environment variable to Kibana container.

--- a/efk/v7.3.0.john/charts/kibana/templates/deployment.yaml
+++ b/efk/v7.3.0.john/charts/kibana/templates/deployment.yaml
@@ -117,6 +117,8 @@ spec:
             value: "{{ .Values.language }}"
           - name: SERVER_HOST
             value: "{{ .Values.serverHost }}"
+          - name: SERVER_BASEPATH
+            value: "/kibana"
 {{- if .Values.extraEnvs }}
 {{ toYaml .Values.extraEnvs | indent 10 }}
 {{- end }}
