--- a/efk/v7.3.0.john/charts/kibana/Chart.yaml
+++ b/efk/v7.3.0.john/charts/kibana/Chart.yaml
@@ -4,8 +4,8 @@ maintainers:
 - email: helm-charts@elastic.co
   name: Elastic
 name: kibana
-version: 7.3.0
-appVersion: 7.3.0
+version: 7.3.0.poseidon
+appVersion: 7.3.0.poseidon
 sources:
   - https://github.com/elastic/kibana
 icon: https://helm.elastic.co/icons/kibana.png
