--- a/mongodb/v5.0.0/templates/deployment-standalone.yaml
+++ b/mongodb/v5.0.0/templates/deployment-standalone.yaml
@@ -128,7 +128,12 @@ spec:
           subPath: mongodb.conf
         {{- end }}
         resources:
-{{ toYaml .Values.resources | indent 10 }}
+          limits:
+            cpu: 2000m
+            memory: 4096Mi
+          requests:
+            cpu: 2000m
+            memory: 4096Mi
 {{- if .Values.metrics.enabled }}
       - name: metrics
         image: {{ template "metrics.image" . }}
