objective: reverted changes made to the mongodb v5.0.0 directory.

--- a/mongodb/v5.0.0/templates/deployment-standalone.yaml
+++ b/mongodb/v5.0.0/templates/deployment-standalone.yaml
@@ -128,12 +128,7 @@ spec:
           subPath: mongodb.conf
         {{- end }}
         resources:
-          limits:
-            cpu: 2000m
-            memory: 4096Mi
-          requests:
-            cpu: 2000m
-            memory: 4096Mi
+{{ toYaml .Values.resources | indent 10 }}
 {{- if .Values.metrics.enabled }}
       - name: metrics
         image: {{ template "metrics.image" . }}
