--- a/mongodb/v5.0.0/templates/statefulset-secondary-rs.yaml
+++ b/mongodb/v5.0.0/templates/statefulset-secondary-rs.yaml
@@ -137,12 +137,7 @@ spec:
               subPath: mongodb.conf
             {{- end }}
           resources:
-            limits:
-              cpu: 2000m
-              memory: 4096Mi
-            requests:
-              cpu: 2000m
-              memory: 4096Mi
+{{ toYaml .Values.resources | indent 12 }}
 {{- if .Values.metrics.enabled }}
         - name: metrics
           image: {{ template "metrics.image" . }}
