--- a/kafka-binami/requirements.yaml
+++ b/kafka-binami/requirements.yaml
@@ -1,5 +1,5 @@
 dependencies:
   - name: zookeeper
-    version: 5.x.x
-    repository: https://charts.bitnami.com/bitnami
+    version: 3.6.1-debian-10-r54
+    repository: 10.134.200.110:5000/bitnami/zookeeper
     condition: zookeeper.enabled
