--- a/kafka/templates/statefulset.yaml
+++ b/kafka/templates/statefulset.yaml
@@ -145,8 +145,12 @@ spec:
               {{- end }}
             - name: KAFKA_INTER_BROKER_LISTENER_NAME
               value: {{ .Values.interBrokerListenerName | quote }}
-            - name: KAFKA_CFG_AUTHORIZER_CLASS_NAME
+            # ========= ACL config =========
+            - name: KAFKA_CFG_AUTHORIZER_CLASS_NAME 
               value: kafka.security.auth.SimpleAclAuthorizer
+            - name: KAFKA_CFG_SUPER_USERS
+              value: User:admin
+            # ==============================
             - name: KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP
               {{- if .Values.listenerSecurityProtocolMap }}
               value: {{ .Values.listenerSecurityProtocolMap | quote }}
