--- a/kafka/values.yaml
+++ b/kafka/values.yaml
@@ -111,7 +111,7 @@ deleteTopicEnable: true
 ## Switch to enable auto creation of topics.
 ## Enabling auto creation of topics not recommended for production or similar environments.
 ##
-autoCreateTopicsEnable: true
+autoCreateTopicsEnable: false
 
 ## The number of messages to accept before forcing a flush of data to disk.
 ##
