--- a/kafka/templates/statefulset.yaml
+++ b/kafka/templates/statefulset.yaml
@@ -239,7 +239,7 @@ spec:
             - name: KAFKA_CFG_LOG_CLEANUP_INTERVAL_MINS
               value: "5"
             - name: KAFKA_CFG_LOG_CLEANER_ENABLE
-              value: true
+              value: "true"
             # ==================================
             - name: KAFKA_CFG_LOG_FLUSH_INTERVAL_MESSAGES
               value: {{ .Values.logFlushIntervalMessages | quote }}
