--- a/mongodb/v5.0.0.0703/templates/prometheus-service-monitor.yaml
+++ b/mongodb/v5.0.0.0703/templates/prometheus-service-monitor.yaml
@@ -3,6 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ template "mongodb.fullname" . }}
+  namespace: cattle-prometheus
   labels:
     app: {{ template "mongodb.name" . }}
     chart: {{ template "mongodb.chart" . }}
