--- a/mongodb/v5.0.0.0618/templates/headless-svc-rs.yaml
+++ b/mongodb/v5.0.0.0618/templates/headless-svc-rs.yaml
@@ -19,7 +19,7 @@ spec:
   - name: mongodb
     port: {{ .Values.service.port }}
 {{- if .Values.metrics.enabled }}
-  - name: metrics
+  - name: zmetrics
     port: 9216
     targetPort: metrics
 {{- end }}
