--- a/mongodb/v5.0.0.0618/templates/statefulset-primary-rs.yaml
+++ b/mongodb/v5.0.0.0618/templates/statefulset-primary-rs.yaml
@@ -151,7 +151,7 @@ spec:
           resources:
 {{ toYaml .Values.resources | indent 12 }}
 {{- if .Values.metrics.enabled }}
-        - name: metrics
+        - name: zmetrics
           image: {{ template "metrics.image" . }}
           imagePullPolicy: {{ .Values.metrics.image.pullPolicy | quote }}
           env:
