--- a/percona-xtradb-cluster/templates/statefulset.yaml
+++ b/percona-xtradb-cluster/templates/statefulset.yaml
@@ -1,4 +1,4 @@
-apiVersion: {{ template "percona-xtradb-cluster.statefulset.apiVersion" . }}
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ template "percona-xtradb-cluster.fullname" . }}
