--- a/percona-xtradb-cluster/templates/statefulset.yaml
+++ b/percona-xtradb-cluster/templates/statefulset.yaml
@@ -1,4 +1,4 @@
-apiVersion: {{ template "percona-xtradb-cluster.statefulset.apiVersion" . }}
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ template "percona-xtradb-cluster.fullname" . }}
@@ -27,7 +27,7 @@ spec:
     spec:
       initContainers:
       - name: "remove-lost-found"
-        image: "busybox:1.25.0"
+        image: "10.134.200.110:5000/busybox:latest"
         imagePullPolicy: IfNotPresent
         command:
         - "rm"
@@ -121,7 +121,7 @@ spec:
         {{- end }}
       {{ if .Values.logTail }}
       - name: "logs"
-        image: "busybox:1.25.0"
+        image: "10.134.200.110:5000/busybox:latest"
         imagePullPolicy: IfNotPresent
         command:
         - "tail"
